fixed settings not working because of backwards incompatible API change
